# rete

./: MANIFEST.in  README.md  pyproject.toml  setup.py
browsers/: builder.sh
browsers/brave/: Dockerfile
browsers/chromium/: Dockerfile  entrypoint.sh
browsers/chromium/extensions/: pgdnlhfefecpicbbihgmbmffkjpaplco.json
browsers/firefox/: Dockerfile  entrypoint.sh
browsers/firefox/extensions/: secure-proxy.xpi  uBlock0@raymondhill.net.xpi  {48748554-4c01-49e8-94af-79662bf34d50}.xpi
browsers/opera/: Dockerfile
browsers/tbb/: Dockerfile
config/: rete.yml  rete_schema.yml
data/: chrome.json
rete/: __init__.py  __main__.py  cli.py  utils.py
rete/config/: rete.yml  rete_schema.yml
rete/iptables/: lan_rules.v4  lan_rules.v6  rules.v4  rules.v6  tor_rules.v4
