[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "rete"
author = "Wh1t3Fox"
author-email = "dev@exploit.design"
home-page = "https://github.com/retenet/rete"
requires = [
    "docker==4.4.0",
    "elevate==0.1.3",
    "jsonschema==3.2.0",
    "PyYAML==5.3.1",
    "rich==9.5.1"
]
requires-python = ">=3.6"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
description-file = "README.md"

[tool.flit.metadata.requires-extra]
dev = [
    "black==20.8b1",
    "ipython==7.19.0",
    "pytest==6.2.1"
] 
doc = ["sphinx"]

[tool.flit.scripts]
rete = rete.cli:main
